# scientific-computing-2024

./: .gitignore  LICENSE  README.md  lesson01_funcs.py
assignments/: assignment01.ipynb  assignment02.ipynb  assignment03.ipynb  assignment04.ipynb  assignment05.ipynb
lecture_notes/: lesson01_intro.ipynb  lesson02_numpy.ipynb  lesson03_pandas.ipynb  lesson04_matplotlib_practice.ipynb  lesson04_matplotlib_tutorial.ipynb  lesson08_random.ipynb
lecture_notes/visualization/: custom_style_white.mplstyle
lecture_notes/visualization/environment/: pyproject.toml
tools/: make_lecture_notes.ipynb
